--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.3</version>
         <configuration>
-          <mainClass>HelloFX</mainClass>
+          <mainClass>JfxAnimVie</mainClass>
         </configuration>
       </plugin>
     </plugins>
